templates/disable-thp.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: thp-disable
spec:
  selector:
    matchLabels:
      name: thp-disable
  template:
    metadata:
      labels:
        name: thp-disable
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 1
      volumes:
      - name: host-sys
        hostPath:
          path: /sys
      containers:
      - name: busybox
        image: busybox
        securityContext:
          privileged: true
        command: ["watch", "-n", "600", "cat", "/sys/kernel/mm/transparent_hugepage/enabled"]
