templates/route-insights.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: insights
  labels:
    group: nuodb
spec:
  host: www.example.com
  to:
    kind: Service
    name: insights-server
    weight: 100
